# shadowbox

./: .gitignore  IMPLEMENTATION_STATUS.md  LATEST_TAURI_STATUS.md  NEW_AI_HANDOVER.md  README.md  SHADOWBOX_FIX_REPORT.md  SHADOWBOX_FIX_REPORT_V2.md  SHADOWBOX_SUPERVISOR_REPORT.md  TAURI_CONFIG.md  TAURI_FINAL_FIX.md
.kilo/plans/: final-cargo-state.md  tauri-fix.md
.playwright-mcp/: page-2026-06-15T23-02-16-618Z.yml  page-2026-06-15T23-02-42-923Z.yml
backend/: pyproject.toml  requirements.txt
backend/src/shadowbox/: browser.py  main.py  tor.py  vault.py
backend/src/shadowbox/state/: models.py  store.py
backend/tests/: test_api.py
deploy/: compose.yml
deploy/chromium/: Dockerfile
deploy/tor/: Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/capabilities/: default.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/entitlements/: entitlements.plist
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  main.rs
plans/: END_TO_END_TESTING.md  LIFECYCLE_MANAGEMENT.md  MACOS_SIGNING.md  VNC_EMBEDDING.md
