[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowbox-backend"
version = "0.1.0"
description = "ShadowBox backend controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "docker>=7.0.0",
    "requests>=2.32.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/shadowbox"]
