[package]
name = "shadowbox-ui"
version = "0.1.0"
description = "ShadowBox desktop shell"
authors = ["ShadowBox"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)"] }
